# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unidb"
version = "0.1.0"
description = "Unified Python database client for SQLite, PostgreSQL, MongoDB, and Redis."
authors = [
    { name="Asrorbek Aliqulov", email="asrorbekaliqulov08@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.0",
    "redis>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/asrorbekaliqulov/unidb"
Repository = "https://github.com/asrorbekaliqulov/unidb"
Issues = "https://github.com/asrorbekaliqulov/unidb/issues"

[tool.setuptools.packages.find]
where = ["unidb"]

# Optional: if you want to include non-code files like README
[tool.setuptools]
include-package-data = true
